--- a/bash.1
+++ b/bash.1
@@ -43,6 +43,9 @@
 .\" Updated to 2.05  Sat 14 Apr 2001
 .\"    by NAKANO Takeo
 .\"
+.\" Updated to 4.2  Thu 8 Sep 2011
+.\"    by Masakazu Takahashi <emasaka@gmail.com>
+.\"
 .\"WORD:	positional parameter	位置パラメータ
 .\"WORD:	preamble		前置部分
 .\"WORD:	postscript		後置部分
