fixed a bug reviewer pointed
Thanks to R4000 2.2

--- a/bash.1
+++ b/bash.1
@@ -117,7 +117,7 @@ bash \- GNU Bourne-Again SHell
 .\"O Shell and Utilities portion of the IEEE POSIX specification
 .\"O (IEEE Standard 1003.1).
 .B bash
-は IEEE POSIX specification (IEEE Working Group 1003\.1)
+は IEEE POSIX specification (IEEE Standard 1003.1)
 の Shell and Utilities に準拠する実装を目指しています。
 .\"O .B Bash
 .\"O can be configured to be POSIX-conformant by default.
