--- a/bash.1
+++ b/bash.1
@@ -753,9 +753,9 @@ bash \- GNU Bourne-Again SHell
 .\"O connected to a network connection, as when executed by the remote shell
 .\"O daemon, usually \fIrshd\fP, or the secure shell daemon \fIsshd\fP.
 .B bash
-は、標準入力がネットワークに接続されて起動されたかどうかにより、
-自分を起動したのがリモートシェルデーモン (通常はリモートシェルデーモン
-\fIrshd\fP またはセキュアシェルデーモン \fIsshd\fP) かどうかを調べます。
+リモートシェルデーモン \fIrshd\fP やセキュアシェルデーモン \fIsshd\fP
+によって実行された場合など、標準入力がネットワーク接続に接続された
+状態で実行されたかどうかを調べます。
 .\"O If
 .\"O .B bash
 .\"O determines it is being run in this fashion, it reads and executes
@@ -1677,7 +1677,7 @@ EOF を読み込むとコマンドが終了します。
 .\"O .B REDIRECTION
 .\"O below).
 .I command
-の標準入力は、実行しているシェルのファイル・ディスクリプターと
+の標準入力は、実行しているシェルのファイル・ディスクリプターの一つと
 パイプによって接続されます。
 このファイル・ディスクリプターは \fINAME\fP[1] に代入されます。
 このパイプは、コマンドで指定されたほかのリダイレクトより先に設けられます
