fixed a bug reviewer pointed
Thanks to OKANO Takayoshi

--- a/bash.1
+++ b/bash.1
@@ -753,7 +753,7 @@ bash \- GNU Bourne-Again SHell
 .\"O connected to a network connection, as when executed by the remote shell
 .\"O daemon, usually \fIrshd\fP, or the secure shell daemon \fIsshd\fP.
 .B bash
-リモートシェルデーモン \fIrshd\fP やセキュアシェルデーモン \fIsshd\fP
+は、リモートシェルデーモン \fIrshd\fP やセキュアシェルデーモン \fIsshd\fP
 によって実行された場合など、標準入力がネットワーク接続に接続された
 状態で実行されたかどうかを調べます。
 .\"O If
