fixed a sentence reviewer pointed
Thanks to Akihiro MOTOKI

--- a/bash.1
+++ b/bash.1
@@ -1799,7 +1799,7 @@ EOF を読み込むとコマンドが終了します。
 .\"O reserved words from being recognized as such, and to prevent
 .\"O parameter expansion.
 \fIクォート (quoting)\fP を使うと、
-特定の文字や単語のシェルに対する特別な意味をなくします。
+特定の文字や単語が持つシェルに対する特別な意味をなくせます。
 クォートを用いると、特殊文字の特殊な扱いを無効にしたり、
 予約語が予約語として識別されることを防いだり、
 パラメータの展開を防いだりできます。
