fixed bugs reviewer pointed (PARAMETERS)
Thanks to 長南洋一

--- a/bash.1
+++ b/bash.1
@@ -2176,18 +2176,18 @@ control-\fIx\fP の文字
 .\"O appended to the variable's value.
 代入文でシェル変数や配列のインデックスに値を代入する場面では、
 += 演算子を使って変数の直前の値に追加したり加算したりできます。
-+= を変数\fI整数\fP属性が設定された変数に適用すると、
++= を\fI整数\fP属性が設定された変数に対して使うと、
 \fI値\fPは算術式展開として評価され、
-同じく評価された変数の現在の値に加算されます。
- += が配列変数への複合代入 (後述の
+変数の現在の値に加算されます。
++= を配列変数への複合代入 (後述の
 .B 配列
-を参照) に適用すると、
-変数の値が設定されていなければ (= の場合と同じく)、
-新しい値は配列の最大のインデックスより一つ大きい位置から追加されるか
-(インデックスによる配列の場合)、新しいキーと値のペアが追加されます
-(連想配列の場合)。
-文字列の値の変数に適用すると、\fI値\fPが展開され、
-変数の値に追加されます。
+を参照) で使うと、
+変数の現在の値は (= を使ったときとは違って) 破棄されません。
+インデックスによる配列の場合は、新しい値が最大のインデックス
+より一つ大きいインデックスから配列に追加されます。
+連想配列の場合は、新しいキーと値の組が追加されます。
+文字列の値の変数に対して使うと、\fI値\fPが展開されて、
+変数の元の値の後に追加されます。
 .\"O .SS Positional Parameters
 .SS 位置パラメータ(Positional Parameters)
 .PP
@@ -2296,9 +2296,9 @@ control-\fIx\fP の文字
 最初のパラメータの展開結果に元の単語のダブルクォートより前の部分が
 結び付き、最後のパラメータの展開結果に元の単語のダブルクォートより
 後の部分が結び付きます。
-位置パラメータがない場合には、"\fB$@\fP" と
+位置パラメータがない場合には、"\fB$@\fP" や
 .B $@
-を展開しても空文字列になります (つまり取り除かれます)。
+を展開しても無かったことになります (つまり取り除かれます)。
 .TP
 .B #
 .\"O Expands to the number of positional parameters in decimal.
@@ -2368,7 +2368,7 @@ control-\fIx\fP の文字
 .B bash
 を起動した場合、実行する文字列の後に引き数があれば、その最初の値が
 .B $0
-に設定されます。このオプションを指定していない場合には、
+に設定されます。引き数がなければ、
 .BR bash
 を起動するときに使用した名前が引き数 0 として与えられ 
 .B $0
@@ -2385,9 +2385,9 @@ control-\fIx\fP の文字
 .\"O When checking mail, this parameter holds the name of the mail file
 .\"O currently being checked.
 シェルの起動時には、環境または引き数リストで渡された、
-実行するシェルまたはシェルスクリプトの絶対ファイル名が設定されます。
-その後は、前のコマンドに対する最後の引き数 (展開後のもの) に展開されます。
-また、実行する各コマンドの完全なファイル名が設定され、
+実行するシェルまたはシェルスクリプトの絶対パス名が設定されます。
+その後では、直前のコマンドに対する最後の引き数 (展開後のもの) に展開されます。
+また、実行する各コマンドの完全なパス名が設定され、
 そのコマンドの環境にエクスポートされます。
 メールをチェックするときには、
 このパラメータは現在チェックしているメールのファイル名を保持します。
