updated which reviewer pointed (PARAMETERS)
Thanks to 長南洋一

--- a/bash.1
+++ b/bash.1
@@ -4274,9 +4274,10 @@ CPU のパーセンテージ。(%U + %S) / %R で算出されます。
 .\"O Referencing an array variable without a subscript is equivalent to
 .\"O referencing the array with a subscript of 0.
 単語の中でダブルクォートの展開が行われるときには、
-最初のパラメータの展開結果に元の単語のダブルクォートより前の部分が
-結び付き、最後のパラメータの展開結果に元の単語のダブルクォートより
-後の部分が結び付きます。
+元の単語のダブルクォートより前の部分の後に
+最初のパラメータの展開結果がつながり、
+最後のパラメータの展開結果の後に
+元の単語のダブルクォートより後の部分がつながります。
 これは特殊パラメータ \fB*\fP や \fB@\fP に似ています (前述の
 .B 特殊パラメータ
 を参照)。
