updated which reviewer pointed (PARAMETERS)
Thanks to 長南洋一

--- a/bash.1
+++ b/bash.1
@@ -2390,7 +2390,7 @@ control-\fIx\fP の文字
 また、実行する各コマンドの完全なパス名が設定され、
 そのコマンドの環境にエクスポートされます。
 メールをチェックするときには、
-このパラメータは現在チェックしているメールのファイル名を保持します。
+このパラメータは現在チェックしているメールファイル名を保持します。
 .PD
 .\"O .SS Shell Variables
 .SS シェル変数
